adding updated fileage

--- a/Source_code/Regression_Analysis_visuals.ipynb
+++ b/Source_code/Regression_Analysis_visuals.ipynb
@@ -18,6 +18,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1da9a895",
+   "metadata": {},
+   "source": [
+    "## Imports all requried packaging:\n",
+    "## Readings in the cleaned data csv and views the columns to make sure there the correct data files "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "11b3f89f",
@@ -26,6 +35,14 @@
    "source": [
     "NAICS_72_df = pd.read_csv('cleaned_NACIS72_df.csv')\n",
     "df_NAICS_71 = pd.read_csv('NAICs71_cleaned.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f482c1c0",
+   "metadata": {},
+   "source": [
+    "# Starting on NACIS 72 Data Set"
    ]
   },
   {
@@ -175,6 +192,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfc47ea9",
+   "metadata": {},
+   "source": [
+    "## Changes the column data type and replaces the data in each row listed removing the strings with a space and changing these columns into integers "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "07f88623",
@@ -214,6 +239,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edcd908b",
+   "metadata": {},
+   "source": [
+    "## Checks the data types and make sure there appropriate to its column "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "6b835a19",
@@ -243,6 +276,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8e950ff9",
+   "metadata": {},
+   "source": [
+    "# Converts net job creation into a float from an unknown object "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "75735dbc",
@@ -254,6 +295,14 @@
     "columns_to_convert = ['Net Job Creation']  # Replace with your column names\n",
     "# Convert multiple columns to a specific data type (e.g., float, int, etc.)\n",
     "NAICS_72_df[columns_to_convert] = NAICS_72_df[columns_to_convert].astype('float64')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8990013f",
+   "metadata": {},
+   "source": [
+    "# Subsets the data frame for filtering and analysis "
    ]
   },
   {
@@ -468,6 +517,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a2f6ff1",
+   "metadata": {},
+   "source": [
+    "# Begining Mult-Linear Regression for NAICS 72 Data set \n",
+    "### Taking the train and test splits in 70/30 split and trian them to model showcasing the fit's Making sure the number of empoyess is the targe and the rest of columns are the predictor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "id": "9cee9946",
@@ -537,6 +595,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e17a1ef3",
+   "metadata": {},
+   "source": [
+    "## Showing the model results in par-polt for clarity for the predictors on the x axis and y axis as the target varabile in a scatter plot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "id": "551edc3a",
@@ -558,6 +624,14 @@
    "source": [
     "fig = sm.graphics.plot_partregress_grid(Naics72_Job_amount_model)\n",
     "fig.tight_layout(pad=1.0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dac6ab9c",
+   "metadata": {},
+   "source": [
+    "## Showcasing a residual par plot to see and check if the four linear assumptions are met. "
    ]
   },
   {
@@ -593,13 +667,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ac859c5",
+   "cell_type": "markdown",
+   "id": "51195c23",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Stand alone regression between \n"
+    "## Attempt of a linear regression between the Annual GDP and Smoke Estimate \n",
+    "### Where smoke estimat is a predictor and Annual Real GDP is a target Varible "
    ]
   },
   {
@@ -679,6 +752,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b11efb6",
+   "metadata": {},
+   "source": [
+    "## Additional testing between the real ANNUAL GDP and Smoke Estimate "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "id": "5ecde1e6",
@@ -715,6 +796,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d06966ef",
+   "metadata": {},
+   "source": [
+    "# NAICS 71 Data set Analysis "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0b75c8d1",
@@ -722,6 +811,15 @@
    "outputs": [],
    "source": [
     "df_NAICS_71"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47da868f",
+   "metadata": {},
+   "source": [
+    "## Data Clean \n",
+    "### Replacing the column types to intergers first removing the commas "
    ]
   },
   {
@@ -764,6 +862,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03331fe5",
+   "metadata": {},
+   "source": [
+    "# Checking the dytpes after inplace conversions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "id": "c7e98307",
@@ -790,6 +896,14 @@
    ],
    "source": [
     "df_NAICS_71.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "404c7089",
+   "metadata": {},
+   "source": [
+    "## Replacing the Net Job Creation to float for regression "
    ]
   },
   {
@@ -823,6 +937,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7d4e8007",
+   "metadata": {},
+   "source": [
+    "# Filtering the data set to subset for analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "id": "dbbb4e51",
@@ -835,6 +957,15 @@
     "X = df_NAICS_71[['Net Job Creation','Rate of Job loss','Smoke_estimate',\n",
     "                'Annual_Real_GDP', 'year']]\n",
     "y = df_NAICS_71['Number of employees']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fcbacb3",
+   "metadata": {},
+   "source": [
+    "# Begining Mult-Linear Regression for NAICS 71 Data set \n",
+    "### Taking the train and test splits in 70/30 split and trian them to model showcasing the fit's Making sure the number of empoyess is the targe and the rest of columns are the predictor"
    ]
   },
   {
@@ -907,6 +1038,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96199d0b",
+   "metadata": {},
+   "source": [
+    "## Showing the model results in par-polt for clarity for the predictors on the x axis and y axis as the target varabile in a scatter plot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 79,
    "id": "b723a892",
@@ -955,12 +1094,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8cf62eb2",
+   "cell_type": "markdown",
+   "id": "8e356c23",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Showcasing a residual par plot to see and check if the four linear assumptions are met."
+   ]
   },
   {
    "cell_type": "code",
@@ -987,12 +1126,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67a3e25d",
+   "cell_type": "markdown",
+   "id": "5f9c4f48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# EDA Done prior to Regression:\n",
+    "## Due to run times the eda was began at the bottom replaced to show reproducing approaches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5ddee44",
+   "metadata": {},
+   "source": [
+    "### NACIS 73 Box plot for checking the distribution Measure of Spread"
+   ]
   },
   {
    "cell_type": "code",
@@ -1038,6 +1186,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfa3c71a",
+   "metadata": {},
+   "source": [
+    "## NACIS 71 Scatter Par Plot to see the base trend"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "id": "61175572",
@@ -1061,6 +1217,14 @@
     "sns.pairplot(df_NAICS_71, x_vars=['Net Job Creation','Rate of Job loss','Smoke_estimate',\n",
     "                'Annual_Real_GDP', 'year'], y_vars='Number of employees', height=3, aspect=1, kind='scatter')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fde40707",
+   "metadata": {},
+   "source": [
+    "# Produced in a 4x4 image for presentation fitting format"
    ]
   },
   {
