--- a/Source_code/part 2_implementation .ipynb
+++ b/Source_code/part 2_implementation .ipynb
@@ -12,6 +12,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52a6ff5d",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning for part analysis \n",
+    "## Loads all intermediate data of interest from the US Census\n",
+    "## Loads the data results data from smoke estimate\n",
+    "**Legend for clarity**\n",
+    "- NAICS 72 = df1\n",
+    "- NAICS 71  = df2\n",
+    "- REAL ANNUAL GDP 72 = df3\n",
+    "- REAL ANNUAL GDP 71  = df5\n",
+    "- Coeur smoke estimate = df4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "id": "fb5b3e40",
@@ -395,6 +411,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d49a75ad",
+   "metadata": {},
+   "source": [
+    "# Renamed columns fro clarity "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "715d94cb",
@@ -421,6 +445,14 @@
     "# call rename () method\n",
     "df_1.rename(columns=dict,\n",
     "          inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0399056",
+   "metadata": {},
+   "source": [
+    "# Subset the data filtering of interest NACIS df "
    ]
   },
   {
@@ -920,26 +952,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4180bb07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# percentage of food and services \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "599a5209",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# percentage of revenue from food and service industry :"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "e8d88f27",
    "metadata": {},
@@ -1001,6 +1013,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a538c0e",
+   "metadata": {},
+   "source": [
+    "# Merginng the NACIS 72 data set to Smoke estimate data set "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "2e489ae6",
@@ -1019,24 +1039,6 @@
    "outputs": [],
    "source": [
     "NAICS72_job_smoke_df= job_smoke_df# ready for multi-linear_regression "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97b9ab02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18f23070",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# hotel and mortells amount of sales made in idaho from year 2012 \n"
    ]
   },
   {
@@ -1408,34 +1410,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4262a805",
+   "cell_type": "markdown",
+   "id": "34c7be60",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "'Meaning of NAICS code (NAICS2017_LABEL)'\n",
-    "''\n",
-    "''\n",
-    "''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "98abad84",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df_2)"
+    "# Rename NACIS 71 Data set for Clarity "
    ]
   },
   {
@@ -1479,6 +1458,14 @@
    ],
    "source": [
     "df_2['Meaning of NAICS Code (NAICS_LABEL)'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d36076a",
+   "metadata": {},
+   "source": [
+    "# Checking the columns for clarity "
    ]
   },
   {
@@ -1526,6 +1513,14 @@
    ],
    "source": [
     "df_2.columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a68af16",
+   "metadata": {},
+   "source": [
+    "# Filtering the column results for EDA analysis"
    ]
   },
   {
@@ -2021,6 +2016,14 @@
    "source": [
     "NAICS71_job_estimation = df_2[['Number of employees','Number of Establishments','year','Net Job Creation','Rate of Job loss' ]]\n",
     "NAICS71_job_estimation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad3923ac",
+   "metadata": {},
+   "source": [
+    "# Merge the NACIS 71 data set to smoke estimates for analysis "
    ]
   },
   {
@@ -2563,6 +2566,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56954480",
+   "metadata": {},
+   "source": [
+    "# Adding the Real Annual GDP data set  for NACIS 72 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "3e7a7840",
@@ -2677,6 +2688,14 @@
    ],
    "source": [
     "df_3.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "114dbdf6",
+   "metadata": {},
+   "source": [
+    "# Check and Chage the Data types from object to Date "
    ]
   },
   {
@@ -2796,6 +2815,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "854f9ab3",
+   "metadata": {},
+   "source": [
+    "# Take the Annual column and remove rows that are 0 "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 112,
    "id": "9a235737",
@@ -2897,6 +2924,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40877b00",
+   "metadata": {},
+   "source": [
+    "# Changing the Column name to make the smoke estimate column name year for mergeing "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 115,
    "id": "b3013631",
@@ -2921,6 +2956,14 @@
     "# call rename () method\n",
     "NACIS_GDP.rename(columns=dict,\n",
     "          inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffecc1a1",
+   "metadata": {},
+   "source": [
+    "# Filtering the rows from GDP data set to merge only the two columns"
    ]
   },
   {
@@ -3640,20 +3683,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0f0e503",
+   "cell_type": "markdown",
+   "id": "994ef01b",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ed09046",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Merge on the year for a inner join For NACIS 72"
+   ]
   },
   {
    "cell_type": "code",
@@ -3667,6 +3702,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e8d3299",
+   "metadata": {},
+   "source": [
+    "# Save to a CSV file EDA and Regression "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 145,
    "id": "bdb56231",
@@ -3675,6 +3718,14 @@
    "source": [
     "#cleaned_NACIS72_df\n",
     "cleaned_NACIS72_df.to_csv('cleaned_NACIS72_df.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "804d5551",
+   "metadata": {},
+   "source": [
+    "# Repeating steps for NAICS 71 Data set "
    ]
   },
   {
@@ -3702,6 +3753,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d76bb2d",
+   "metadata": {},
+   "source": [
+    "# Filtering the data set from Unnamed data "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 126,
    "id": "f79c8dc9",
@@ -3709,6 +3768,14 @@
    "outputs": [],
    "source": [
     "real_gdp_71 = df_5[['Quaterly_Real_GDP', 'Quarter', 'DATE', 'Annual_Real_GDP']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4c74b64",
+   "metadata": {},
+   "source": [
+    "# Converting to year to datetime"
    ]
   },
   {
@@ -3831,6 +3898,14 @@
    ],
    "source": [
     "real_gdp_71.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32e555c5",
+   "metadata": {},
+   "source": [
+    "# Filtering the Real Annual GDP data set to columns of interest"
    ]
   },
   {
@@ -4004,6 +4079,14 @@
    ],
    "source": [
     "NACIS_GDP_71_needs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63ec0315",
+   "metadata": {},
+   "source": [
+    "# Removing Rows where REAL GDP Annual is 0 "
    ]
   },
   {
@@ -4564,6 +4647,14 @@
    ],
    "source": [
     " NAICS71_job_smoke_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbed4a10",
+   "metadata": {},
+   "source": [
+    "# Merge the data set of Real GDP and NAICS to once csv file for Regression and EDA "
    ]
   },
   {
